# ext-openv2g

./: CMakeLists.txt  README.txt
include/openv2g/: iso1EXIDatatypes.h
lib/: CMakeLists.txt
lib/appHandshake/: appHandEXIDatatypes.c  appHandEXIDatatypesDecoder.c  appHandEXIDatatypesEncoder.c
lib/codec/: BitInputStream.c  BitOutputStream.c  ByteStream.c  DecoderChannel.c  EXIHeaderDecoder.c  EXIHeaderEncoder.c  EncoderChannel.c  MethodsBag.c
lib/din/: dinEXIDatatypes.c  dinEXIDatatypesDecoder.c  dinEXIDatatypesEncoder.c
lib/iso1/: iso1EXIDatatypes.c  iso1EXIDatatypesDecoder.c  iso1EXIDatatypesEncoder.c
lib/iso2/: iso2EXIDatatypes.c  iso2EXIDatatypesDecoder.c  iso2EXIDatatypesEncoder.c
lib/transport/: v2gtp.c
lib/xmldsig/: xmldsigEXIDatatypes.c  xmldsigEXIDatatypesDecoder.c  xmldsigEXIDatatypesEncoder.c
